fixed spacing between buttons

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -192,13 +192,13 @@ li.line {
         width: 100%;
         align-items: center;
         font-size: small;
-        gap:20px;
+        gap:5px;
     }
 
     .download-btn, .contact-btn {
         width: 30% !important;
         border-radius: 5px;
-        margin: 0 10px;
+        margin: 0 5px;
     }
 }
 
